added __future__ import to core.py for Python 3.8 and 3.9 compatibility.

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ db_init/
 *.db
 
 # -----------------------
-# Local scripts & test data (not for distribution)
+# Local scripts & test data
 # -----------------------
 classes.py
 main.py
